ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: userapp.info
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: myapp-test-userapp-svc
                port:
                  number: 5000

    - host: blue.userapp.info
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: blue-test-userapp-svc
                port:
                  number: 5000

    - host: green.userapp.info
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: green-test-userapp-svc
                port:
                  number: 5000
